--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </div>
       <div class="grid lg:grid-cols-2 gap-6">
         <!--card-1-->
-        <div class="card card-side bg-white shadow-xl">
+        <div class="card card-side bg-white">
           <figure><img src="/Images/5.png" alt="World Cup Flags Football"/></figure>
           <div class="card-body">
             <div class="flex justify-center items-center gap-2 py-4">
@@ -205,7 +205,7 @@
           </div>
         </div>
         <!--card-2-->
-        <div class="card card-side bg-white shadow-xl">
+        <div class="card card-side bg-white">
                   <figure><img src="/Images/6.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -230,7 +230,7 @@
                   </div>
         </div>
         <!--card-3-->
-        <div class="card card-side bg-white shadow-xl">
+        <div class="card card-side bg-white">
                   <figure><img src="/Images/7.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -255,7 +255,7 @@
                   </div>
         </div>
         <!--card-4-->
-        <div class="card card-side bg-white shadow-xl">
+        <div class="card card-side bg-white">
                   <figure><img src="/Images/8.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -280,7 +280,7 @@
                   </div>
         </div>
         <!--card-5-->
-        <div class="card card-side bg-white shadow-xl">
+        <div class="card card-side bg-white">
           <figure><img src="/Images/9.png" alt="World Cup Flags Football"/></figure>
           <div class="card-body">
             <div class="flex justify-center items-center gap-2 py-4">
@@ -305,7 +305,7 @@
           </div>
         </div>
         <!--card-6-->
-        <div class="card card-side bg-white shadow-xl">
+        <div class="card card-side bg-white">
                   <figure><img src="/Images/10.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -399,6 +399,83 @@
             <div class="collapse-content font-normal text-[#13131899]"> 
               <p>Elevate Your Experience: Unveiling the Pinnacle of Our Equipment</p>
             </div>
+          </div>
+        </div>
+      </div>
+      <!--get in part start-->
+      <div class="text-black text-center space-y-5 my-24">
+        <h2 class="font-extrabold text-4xl">Get In Touch</h2>
+        <p class="font-medium text-base">we value the opportunity to connect with you. Whether you have inquiries, need assistance, <br> or are exploring potential collaborations</p>
+      </div>
+      <!--contact part start-->
+      <div class="grid lg:grid-cols-2">
+        <div class="col-span-1 space-y-6">
+          <div class="card w-96 bg-[#bced6e1a]">
+            <div class="px-10 pt-10">
+              <img src="/Images/Group 1171275317.png" alt="Shoes" class="rounded-xl" />
+              <div class="card-body items-start">
+                <h2 class="card-title font-normal text-base text-[#13131866]">Phone Number : </h2>
+                <p class="text-lg font-extrabold text-[#131318]">(+62) 123-321-543</p>
+              </div>
+            </div>
+          </div>
+          <div class="card w-96 bg-[#bced6e1a]">
+            <div class="px-10 pt-10">
+              <img src="/Images/Group 1171275318.png" alt="Shoes" class="rounded-xl" />
+              <div class="card-body items-start">
+                <h2 class="card-title font-normal text-base text-[#13131866]">Email : </h2>
+                <p class="text-lg font-extrabold text-[#131318]">hockeys@support.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="card w-96">
+            <div class="px-10 pt-10">
+              <img src="/Images/Group 1171275321.png" alt="Shoes" class="rounded-xl" />
+              <div class="card-body items-start">
+                <h2 class="card-title font-normal text-base text-[#13131866]">Location : </h2>
+                <p class="text-lg font-extrabold text-[#131318]">152/1 Mohakhali Wireless Gate</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class=" col-span-1 grid lg:grid-cols-2 gap-6">
+          <!--1-->
+          <label class="form-control w-full max-w-xs lg:col-span-1">
+            <div class="label">
+              <span class="label-text font-bold text-[#131318] text-xl">your name</span>
+            </div>
+            <input type="text" placeholder="Enter your full name" class="input input-bordered bg-[#bced6e1a] w-full max-w-xs" />
+          </label>
+          <!--2-->
+          <label class="form-control w-full max-w-xs lg:col-span-1">
+            <div class="label">
+              <span class="label-text font-bold text-[#131318] text-xl">Your Email</span>
+            </div>
+            <input type="text" placeholder="Enter your email" class="input input-bordered bg-[#bced6e1a] w-full max-w-xs" />
+          </label>
+          <!--3-->
+          <label class="form-control w-full max-w-xs lg:col-span-1">
+            <div class="label">
+              <span class="label-text font-bold text-[#131318] text-xl">Subject</span>
+            </div>
+            <input type="text" placeholder="Enter your subject" class="input input-bordered bg-[#bced6e1a] w-full max-w-xs" />
+          </label>
+          <!--4-->
+          <label class="form-control w-full max-w-xs lg:col-span-1">
+            <div class="label">
+              <span class="label-text font-bold text-[#131318] text-xl">Phone Number</span>
+            </div>
+            <input type="text" placeholder="Enter your phone number" class="input input-bordered bg-[#bced6e1a] w-full max-w-xs" />
+          </label>
+          <!--5-->
+          <label class="form-control w-full lg:col-span-2">
+            <div class="label">
+              <span class="label-text font-bold text-[#131318] text-xl">Message</span>
+            </div>
+            <input type="text" placeholder="Write your message" class="input input-bordered bg-[#bced6e1a] w-full h-40" />
+          </label>
+          <div class="lg:col-span-2">
+            <a class="btn bg-[#FF4240] border-none text-white font-bold text-xl w-full">Send Message</a>
           </div>
         </div>
       </div>
