--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </ul>
             </div>
             <div class="navbar-end space-x-1 lg:space-x-4">
-              <div>
+              <div class="hidden lg:flex">
                 <i class="fa-solid fa-magnifying-glass" style="color: #89898b;"></i>
               </div>
               <a class="btn bg-[#FF4240] border-none text-white">Get Ticket</a>
@@ -94,32 +94,34 @@
       </div>
       <!--progress part start-->
       <div class="text-black text-center space-y-5 my-24">
+        <hr class="border-dotted border-1">
         <h2 class="font-extrabold text-4xl">Professional Hockeys Club</h2>
         <p class="font-medium text-base">Welcome to the heart of the action, where passion meets precision, and the ice comes <br> alive with the thunderous applause of fans.</p>
+        <hr class="border-dotted border-1">
       </div>
       <div class="grid lg:grid-cols-4">
-        <div class="card lg:w-90 bg-white col-span-1">
+        <div class="card lg:w-90 bg-white col-span-1 flex flex-col items-center">
           <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><p class="text-black font-extrabold">87%</p></div>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-4 font-semibold text-black">Prayer Facility</h2>
             <p class="font-regular text-black">Spiritual Serenity: Embrace Tranquility at Our Prayer Facility</p>
           </div>
         </div>
-        <div class="card lg:w-90 bg-white col-span-1">
+        <div class="card lg:w-90 bg-white col-span-1 flex flex-col items-center">
           <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><p class="text-black font-extrabold">95%</p></div>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-4 font-semibold text-black">Experienced Coach</h2>
             <p class="font-regular text-black">Guiding Excellence: Unlock Your Potential with Our Experienced <br> Coach</p>
           </div>
         </div>
-        <div class="card lg:w-90 bg-white col-span-1">
+        <div class="card lg:w-90 bg-white col-span-1 flex flex-col items-center">
           <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><p class="text-black font-extrabold">90%</p></div>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-4 font-semibold text-black">Senior Player</h2>
             <p class="font-regular text-black">Legendary Legacy: Celebrating Our Senior Player</p>
           </div>
         </div>
-        <div class="card lg:w-90 bg-white col-span-1">
+        <div class="card lg:w-90 bg-white col-span-1 flex flex-col items-center">
           <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><p class="text-black font-extrabold">80%</p></div>
           <div class="card-body items-center text-center">
             <h2 class="card-title my-4 font-semibold text-black">Training Ground</h2>
@@ -129,15 +131,17 @@
       </div>
       <!--program part start-->
       <div class="text-black text-center space-y-5 my-24">
+        <hr class="border-dotted border-1">
         <h2 class="font-extrabold text-4xl">Program Sections</h2>
         <p class="font-medium text-base">Dive into a world of curated experiences and enriching content with our <br> meticulously crafted program sections.</p>
+        <hr class="border-dotted border-1">
       </div>
-      <div class="grid grid-cols-2 gap-6"> 
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6"> 
         <!--section-1-->
         <div class="col-span-1">
           <div class="card image-full">
             <figure><img class="w-full" src="/Images/2.png" alt="junior_program" /></figure>
-            <div class="card-body py-28">
+            <div class="card-body py-10 lg:py-28">
               <h2 class="card-title font-extrabold text-white text-2xl">Junior Program</h2>
               <p class="font-medium text-white text-base">Nurturing Tomorrow's Champions: Explore Our Junior Program</p>
               <div class="card-actions justify-start">
@@ -150,7 +154,7 @@
         <div class="col-span-1">
           <div class="card image-full">
             <figure><img class="w-full" src="/Images/3.png" alt="Teenager Program" /></figure>
-            <div class="card-body py-28">
+            <div class="card-body py-10 lg:py-28">
               <h2 class="card-title font-extrabold text-white text-2xl">Teenager Program</h2>
               <p class="font-medium text-white text-base">Empowering Teenagers: Unleashing Potential through Our Teenager Program</p>
               <div class="card-actions justify-start">
@@ -160,12 +164,12 @@
           </div>
         </div>
               <!--section-3-->
-              <div class="col-span-2">
+              <div class=" col-span-1 lg:col-span-2">
                 <div class="card image-full">
                   <figure><img class="w-full" src="/Images/4.png" alt="Professional Program" /></figure>
-                  <div class="card-body py-32">
+                  <div class="card-body py-10 lg:py-28">
                     <h2 class="card-title font-extrabold text-white text-2xl">Professional Program</h2>
-                    <p class="font-medium text-white text-base">Embark on a transformative journey toward professional mastery with <br> our comprehensive Professional Program is meticulously designed to empower individuals <br> with the knowledge, skills, and insights needed to excel in their chosen fields.</p>
+                    <p class="font-medium text-white text-base">Embark on a transformative journey toward professional mastery with <br> our comprehensive Professional Program is meticulously designed</p>
                     <div class="card-actions justify-start">
                       <a class="btn bg-[#FF4240] border-none text-white">Register Now!</a>
                     </div>
@@ -174,16 +178,18 @@
               </div>
       </div>
       <!--new product part start-->
-      <div class="text-black text-center space-y-5 my-24">
+      <div class="text-black text-center space-y-5 py-24">
+        <hr class="border-dotted border-1">
         <h2 class="font-extrabold text-4xl">Our New Products</h2>
         <p class="font-medium text-base">We are excited to introduce our newest lineup of cutting-edge products, <br> carefully crafted to elevate your experience </p>
+        <hr class="border-dotted border-1">
       </div>
       <div class="grid lg:grid-cols-2 gap-6">
         <!--card-1-->
-        <div class="card card-side bg-white">
+        <div class="card card-side bg-white border-2 rounded-lg">
           <figure><img src="/Images/5.png" alt="World Cup Flags Football"/></figure>
           <div class="card-body">
-            <div class="flex justify-center items-center gap-2 py-4">
+            <div class="flex justify-center items-center gap-2">
               <i class="fa-solid fa-star" style="color: #f99808;"></i>
               <p class="text-[#13131899] font-medium">5.0</p>
               <i class="fa-regular fa-eye"></i>
@@ -205,7 +211,7 @@
           </div>
         </div>
         <!--card-2-->
-        <div class="card card-side bg-white">
+        <div class="card card-side bg-white border-2 rounded-lg">
                   <figure><img src="/Images/6.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -230,7 +236,7 @@
                   </div>
         </div>
         <!--card-3-->
-        <div class="card card-side bg-white">
+        <div class="card card-side bg-white border-2 rounded-lg">
                   <figure><img src="/Images/7.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -255,7 +261,7 @@
                   </div>
         </div>
         <!--card-4-->
-        <div class="card card-side bg-white">
+        <div class="card card-side bg-white border-2 rounded-lg">
                   <figure><img src="/Images/8.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -280,7 +286,7 @@
                   </div>
         </div>
         <!--card-5-->
-        <div class="card card-side bg-white">
+        <div class="card card-side bg-white border-2 rounded-lg">
           <figure><img src="/Images/9.png" alt="World Cup Flags Football"/></figure>
           <div class="card-body">
             <div class="flex justify-center items-center gap-2 py-4">
@@ -305,7 +311,7 @@
           </div>
         </div>
         <!--card-6-->
-        <div class="card card-side bg-white">
+        <div class="card card-side bg-white border-2 rounded-lg">
                   <figure><img src="/Images/10.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
@@ -332,8 +338,10 @@
       </div>
       <!--question part start-->
       <div class="text-black text-center space-y-5 my-24">
+        <hr class="border-dotted border-1">
         <h2 class="font-extrabold text-4xl">Clients Question</h2>
         <p class="font-medium text-base">we value the questions posed by our clients as key opportunities to deepen our understanding, <br> refine our strategies, and deliver unparalleled service.</p>
+        <hr class="border-dotted border-1">
       </div>
       <div class="grid lg:grid-cols-2">
         <div>
@@ -404,36 +412,38 @@
       </div>
       <!--get in part start-->
       <div class="text-black text-center space-y-5 my-24">
+        <hr class="border-dotted border-1">
         <h2 class="font-extrabold text-4xl">Get In Touch</h2>
         <p class="font-medium text-base">we value the opportunity to connect with you. Whether you have inquiries, need assistance, <br> or are exploring potential collaborations</p>
+        <hr class="border-dotted border-1">
       </div>
       <!--contact part start-->
-      <div class="grid lg:grid-cols-2">
+      <div class="grid grid-cols-1 lg:grid-cols-2">
         <div class="col-span-1 space-y-6">
-          <div class="card w-96 bg-[#bced6e1a]">
+          <div class="card lg:w-96 bg-[#bced6e1a]">
             <div class="px-10 pt-10">
               <img src="/Images/Group 1171275317.png" alt="Shoes" class="rounded-xl" />
-              <div class="card-body items-start">
+              <div class="py-5">
                 <h2 class="card-title font-normal text-base text-[#13131866]">Phone Number : </h2>
-                <p class="text-lg font-extrabold text-[#131318]">(+62) 123-321-543</p>
+                <p class="text-lg font-extrabold mt-2 text-[#131318]">(+62) 123-321-543</p>
               </div>
             </div>
           </div>
-          <div class="card w-96 bg-[#bced6e1a]">
+          <div class="card lg:w-96 bg-[#bced6e1a]">
             <div class="px-10 pt-10">
               <img src="/Images/Group 1171275318.png" alt="Shoes" class="rounded-xl" />
-              <div class="card-body items-start">
+              <div class="py-5">
                 <h2 class="card-title font-normal text-base text-[#13131866]">Email : </h2>
-                <p class="text-lg font-extrabold text-[#131318]">hockeys@support.com</p>
+                <p class="text-lg font-extrabold mt-2 text-[#131318]">hockeys@support.com</p>
               </div>
             </div>
           </div>
-          <div class="card w-96">
+          <div class="card lg:w-96">
             <div class="px-10 pt-10">
               <img src="/Images/Group 1171275321.png" alt="Shoes" class="rounded-xl" />
-              <div class="card-body items-start">
+              <div class="py-5">
                 <h2 class="card-title font-normal text-base text-[#13131866]">Location : </h2>
-                <p class="text-lg font-extrabold text-[#131318]">152/1 Mohakhali Wireless Gate</p>
+                <p class="text-lg font-extrabold mt-2 text-[#131318]">152/1 Mohakhali Wireless Gate</p>
               </div>
             </div>
           </div>
@@ -474,14 +484,62 @@
             </div>
             <input type="text" placeholder="Write your message" class="input input-bordered bg-[#bced6e1a] w-full h-40" />
           </label>
+          <!--button part start-->
           <div class="lg:col-span-2">
             <a class="btn bg-[#FF4240] border-none text-white font-bold text-xl w-full">Send Message</a>
           </div>
         </div>
       </div>
+      <!--media icon part start-->
+      <div class="bg-[#bced6e1a]">
+        <div>
+          <p class="text-2xl font-extrabold text-[#131318] text-center py-4">Social Media</p>
+        </div>
+        <div class="flex items-center justify-center gap-5 mb-24 py-5">
+          <div><i class="fa-brands fa-twitter" style="color: #000000;"></i></div>
+          <div><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></div>
+          <div><i class="fa-brands fa-instagram" style="color: #000000;"></i></div>
+          <div><i class="fa-brands fa-github" style="color: #000000;"></i></div>
+        </div>
+      </div>
     </main>
-    <footer>
-
+    <!--footer part start-->
+    <footer class="grid gap-10 grid-cols-1 lg:grid-cols-5 text-white py-[40px] lg:py-[100px] px-3 lg:px-24 bg-[#131318]">
+      <div class="col-span-2 text-center lg:text-start">
+          <h2 class="font-extrabold text-3xl text-white ">Get in touch</h2>
+          <p class="text-[#ffffff99] font-medium">Feel free to reach out and get in touchm <br> with us for any inquiries or <br> assistance. </p>
+          <div class="space-y-4">
+              <p class="text-[#ffffff99] font-medium"><i class="text-[#FF4240] mr-4 fa-solid fa-envelope"></i>hockeys@support.com</p>
+              <p class="text-[#ffffff99] font-medium"><i class="text-[#FF4240] mr-4 fa-solid fa-phone"></i>(+62) 123-321-543</p>
+          </div>
+      </div>
+      <div class="col-span-2">
+          <div class=" flex justify-center gap-20 lg:gap-28 ">
+              <div class="lg:col-span-1 space-y-2 text-center lg:text-start flex flex-col">
+                  <header class="font-bold text-xl">Company</header> 
+                  <a class="link link-hover text-[#ffffff99] font-medium"">About us</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">Leadership</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">Careers</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">News & Article</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">Legal Notice</a>
+              </div>
+              <div class="lg:col-span-1 space-y-2 text-center lg:text-start flex flex-col">
+                  <header class="font-bold text-xl">Support</header> 
+                  <a class="link link-hover text-[#ffffff99] font-medium"">Help Center</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">FAQ</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">Ticket Support</a>
+                  <a class="link link-hover text-[#ffffff99] font-medium"">Contact Us</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-span-1 flex space-y-2 flex-col text-center lg:text-start">
+          <header class="font-bold text-xl">Service</header> 
+          <a class="link link-hover text-[#ffffff99] font-medium"">Academy</a>
+          <a class="link link-hover text-[#ffffff99] font-medium"">Group Lesson</a>
+          <a class="link link-hover text-[#ffffff99] font-medium"">Private Lesson</a>
+          <a class="link link-hover text-[#ffffff99] font-medium"">Hockeys for kids</a>
+          <a class="link link-hover text-[#ffffff99] font-medium"">Hockeys for Adult</a>
+      </div>
     </footer>
 </body>
 </html>
