--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       <!--banner part start-->
       <div class="carousel w-full relative">
         <div id="slide1" class="carousel-item relative w-full">
-          <img src="Images/1.png" class="w-full">
+          <img src="./Images/1.png" class="w-full">
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a> 
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div> 
         <div id="slide2" class="carousel-item relative w-full">
-          <img src="Images/1.png" class="w-full">
+          <img src="./Images/1.png" class="w-full">
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle">❮</a> 
             <a href="#slide3" class="btn btn-circle">❯</a>
@@ -140,7 +140,7 @@
         <!--section-1-->
         <div class="col-span-1">
           <div class="card image-full">
-            <figure><img class="w-full" src="/Images/2.png" alt="junior_program" /></figure>
+            <figure><img class="w-full" src="./Images/2.png" alt="junior_program" /></figure>
             <div class="card-body py-10 lg:py-28">
               <h2 class="card-title font-extrabold text-white text-2xl">Junior Program</h2>
               <p class="font-medium text-white text-base">Nurturing Tomorrow's Champions: Explore Our Junior Program</p>
@@ -187,7 +187,7 @@
       <div class="grid lg:grid-cols-2 gap-6">
         <!--card-1-->
         <div class="card card-side bg-white border-2 rounded-lg">
-          <figure><img src="/Images/5.png" alt="World Cup Flags Football"/></figure>
+          <figure><img src="./Images/5.png" alt="World Cup Flags Football"/></figure>
           <div class="card-body">
             <div class="flex justify-center items-center gap-2">
               <i class="fa-solid fa-star" style="color: #f99808;"></i>
@@ -212,7 +212,7 @@
         </div>
         <!--card-2-->
         <div class="card card-side bg-white border-2 rounded-lg">
-                  <figure><img src="/Images/6.png" alt="World Cup Flags Football"/></figure>
+                  <figure><img src="./Images/6.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
                       <i class="fa-solid fa-star" style="color: #f99808;"></i>
@@ -237,7 +237,7 @@
         </div>
         <!--card-3-->
         <div class="card card-side bg-white border-2 rounded-lg">
-                  <figure><img src="/Images/7.png" alt="World Cup Flags Football"/></figure>
+                  <figure><img src="./Images/7.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
                       <i class="fa-solid fa-star" style="color: #f99808;"></i>
@@ -262,7 +262,7 @@
         </div>
         <!--card-4-->
         <div class="card card-side bg-white border-2 rounded-lg">
-                  <figure><img src="/Images/8.png" alt="World Cup Flags Football"/></figure>
+                  <figure><img src="./Images/8.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
                       <i class="fa-solid fa-star" style="color: #f99808;"></i>
@@ -287,7 +287,7 @@
         </div>
         <!--card-5-->
         <div class="card card-side bg-white border-2 rounded-lg">
-          <figure><img src="/Images/9.png" alt="World Cup Flags Football"/></figure>
+          <figure><img src="./Images/9.png" alt="World Cup Flags Football"/></figure>
           <div class="card-body">
             <div class="flex justify-center items-center gap-2 py-4">
               <i class="fa-solid fa-star" style="color: #f99808;"></i>
@@ -312,7 +312,7 @@
         </div>
         <!--card-6-->
         <div class="card card-side bg-white border-2 rounded-lg">
-                  <figure><img src="/Images/10.png" alt="World Cup Flags Football"/></figure>
+                  <figure><img src="./Images/10.png" alt="World Cup Flags Football"/></figure>
                   <div class="card-body">
                     <div class="flex justify-center items-center gap-2 py-4">
                       <i class="fa-solid fa-star" style="color: #f99808;"></i>
@@ -345,7 +345,7 @@
       </div>
       <div class="grid lg:grid-cols-2">
         <div>
-          <img src="/Images/11.png" alt="">
+          <img src="./Images/11.png" alt="">
         </div>
         <div>
           <!--1-->
@@ -422,7 +422,7 @@
         <div class="col-span-1 space-y-6">
           <div class="card lg:w-96 bg-[#bced6e1a]">
             <div class="px-10 pt-10">
-              <img src="/Images/Group 1171275317.png" alt="Shoes" class="rounded-xl" />
+              <img src="./Images/Group 1171275317.png" alt="Shoes" class="rounded-xl" />
               <div class="py-5">
                 <h2 class="card-title font-normal text-base text-[#13131866]">Phone Number : </h2>
                 <p class="text-lg font-extrabold mt-2 text-[#131318]">(+62) 123-321-543</p>
@@ -431,7 +431,7 @@
           </div>
           <div class="card lg:w-96 bg-[#bced6e1a]">
             <div class="px-10 pt-10">
-              <img src="/Images/Group 1171275318.png" alt="Shoes" class="rounded-xl" />
+              <img src="./Images/Group 1171275318.png" alt="Shoes" class="rounded-xl" />
               <div class="py-5">
                 <h2 class="card-title font-normal text-base text-[#13131866]">Email : </h2>
                 <p class="text-lg font-extrabold mt-2 text-[#131318]">hockeys@support.com</p>
@@ -440,7 +440,7 @@
           </div>
           <div class="card lg:w-96">
             <div class="px-10 pt-10">
-              <img src="/Images/Group 1171275321.png" alt="Shoes" class="rounded-xl" />
+              <img src="./Images/Group 1171275321.png" alt="Shoes" class="rounded-xl" />
               <div class="py-5">
                 <h2 class="card-title font-normal text-base text-[#13131866]">Location : </h2>
                 <p class="text-lg font-extrabold mt-2 text-[#131318]">152/1 Mohakhali Wireless Gate</p>
