--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <!--section-2-->
         <div class="col-span-1">
           <div class="card image-full">
-            <figure><img class="w-full" src="/Images/3.png" alt="Teenager Program" /></figure>
+            <figure><img class="w-full" src="./Images/3.png" alt="Teenager Program" /></figure>
             <div class="card-body py-10 lg:py-28">
               <h2 class="card-title font-extrabold text-white text-2xl">Teenager Program</h2>
               <p class="font-medium text-white text-base">Empowering Teenagers: Unleashing Potential through Our Teenager Program</p>
@@ -166,7 +166,7 @@
               <!--section-3-->
               <div class=" col-span-1 lg:col-span-2">
                 <div class="card image-full">
-                  <figure><img class="w-full" src="/Images/4.png" alt="Professional Program" /></figure>
+                  <figure><img class="w-full" src="./Images/4.png" alt="Professional Program" /></figure>
                   <div class="card-body py-10 lg:py-28">
                     <h2 class="card-title font-extrabold text-white text-2xl">Professional Program</h2>
                     <p class="font-medium text-white text-base">Embark on a transformative journey toward professional mastery with <br> our comprehensive Professional Program is meticulously designed</p>
